# smoothie-rs-queuer

./: Cargo.toml  LICENSE  README.md  build.rs  clippy.toml
.github/workflows/: release.yml
docs/: architecture.md
src/: config.rs  main.rs  queue.rs  ui.rs  worker.rs
